--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
+    "react-textarea-autosize": "^8.5.3",
     "sass": "^1.77.8",
     "vite-tsconfig-paths": "^4.3.2"
   },
